<resources>
    <string name="app_name">Books Everywhere</string>

    <string name="add_book">Add a new book</string>
    <string name="remove_book">Remove this book</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="year">Year</string>

    <string name="no_internet">Check your internet connection and restart the app!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
