<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".activities.MainActivity">

    <EditText
        android:id="@+id/title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/author_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/author_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        app:layout_constraintBottom_toTopOf="@+id/year_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input" />

    <EditText
        android:id="@+id/year_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/add_book_to_rv_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_input" />

    <Button
        android:id="@+id/add_book_to_rv_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/add_book"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_input" />

</androidx.constraintlayout.widget.ConstraintLayout>